2001-11-24  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winnt.h (PACCESS_MASK): Add typedef.
	* include/aclapi.h: New file.
	* include/acctrl.h: New file.
	* lib/advapi32.def: Add missing symbols.
	* lib/test.c: Add #include <aclapi.h>.

2001-11-23  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winbase.h (OSVERSIONINFO[AW],VER_PLATFORM_WIN32s,
	VER_PLATFORM_WIN32_WINDOWS,VER_PLATFORM_WIN32_NT): Move from
	here ...
	* include/winnt.h: ... to here.
	* include/winbase.h (VerifyVersionInfo[AW]): Add declaration.
	* include/winnt.h (OSVERSIONINFOEX[AW]): Add structure definitions
	and typedefs.
	(VER_NT_WORKSTATION,VER_NT_DOMAIN_CONTROLLER,VER_NT_SERVER):
	Add defines.

2001-11-16  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (tagALTTABINFO, tagCOMBOBOXINFO, 
	tagCURSORINFO, tagMENUBARINFO, tagMENUINFO, tagMONITORINFO
	tagSCROLLBARINFO, tagTITLEBARINFO. tagWINDOWINFO,
	tagLASTINPUTINFO ): Define new structures. 
	(EndMenu, GetAltTabInfo[AW],GetComboBoxInfo,GetCursorInfo,
	GetLastInputInfo, GetListBoxInfo, GetMenuBarInfo,
	GetMonitorInfo[AW], GetScrollBarInfo, GetTitleBarInfo,
	GetWindowInfo, GetWindowModuleFileName[AW],GetMenuInfo
	SetMenuInfo): Add new prototypes.
	* lib/user32.def: Add import stubs for above functions.

	* include/winuser.h (IDC_STATIC): Protect against prior
	definition.

2001-11-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/winuser.h (IDC_STATIC): Add define.
	Thanks to: Benoit Laniel.

2001-11-05  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/commdlg.h: Include <unknwn.h> rather than local
	definition of LPUKNOWN. 
	* include/rpcproxy.h: Don't include if ndef CINTERFACE.
	Emit warning.

2001-11-05  Mattia Barbon  <mbarbon@dsi.unive.it>

	* include/windef.h (DECLSPEC_NORTEURN): Add an empty version
	for Watcom.
	(DECLARE_STDCALL_P): Use it to add __stdcall decoration for
	functions of the form 'type * function(...)' in a way compatible
	with both Watcom and GCC.