@@ -1,9 +1,16 @@
 LIBRARY "IPHLPAPI.DLL"
 EXPORTS
+AddIPAddress@20
 CreateIpForwardEntry@4
 CreateIpNetEntry@4
+CreateProxyArpEntry@12
+DeleteIPAddress@4
 DeleteIpForwardEntry@4
 DeleteIpNetEntry@4
+DeleteProxyArpEntry@12
+EnableRouter@8
+FlushIpNetTable@4
+GetAdapterIndex@8
 GetAdaptersInfo@8
 GetBestInterface@8
 GetBestRoute@12
@@ -18,16 +25,21 @@ GetIpNetTable@12
 GetIpStatistics@4
 GetNetworkParams@8
 GetNumberOfInterfaces@4
+GetPerAdapterInfo@12
 GetRTTAndHopCount@16
 GetTcpStatistics@4
 GetTcpTable@12
 GetUdpStatistics@4
 GetUdpTable@12
+GetUniDirectionalAdapterInfo@8
 IpReleaseAddress@4
 IpRenewAddress@4
+SendARP@16
+SetAdapterIpAddress@20
 SetIfEntry@4
 SetIpForwardEntry@4
 SetIpNetEntry@4
 SetIpStatistics@4
 SetIpTTL@4
 SetTcpEntry@4
+UnenableRouter@8
